# pomodoroTasks2

./: .gitignore  .travis.yml  CHANGELOG  README.md  do_timeout.py  pomodoro-client.py  pomodoro-daemon.py  pomodoro-systray.py  pomodoroTasks2.spec  setup.cfg  setup.py
.eggs/pbr-3.0.1-py2.7.egg/EGG-INFO/: PKG-INFO
extras/: add-reminder.sh  on-modify.timewarrior  pomodoro-client.bash_autocompletion  prepare_hooks.sh  sleep@.service  stop-task-on-logout.service  work.py
gui/: change_task.glade  timeout.glade
pomodoroTasks2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json
pomodorotasks/: client.py  daemon.py  do_timeout.py  systray.py
pomodorotasks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pomodorotasks/test/: basic.py
test/: basic.py
tests/: basic.py
