[metadata]
name = pomodoroTasks2
packages = pomodorotasks
version = 0.5
author = liloman
author_email = "pts@4.x.land"
url = "https://github.com/liloman"
description="Graphical trayicon to pomodoro with taskwarrior/timewarrior"
keywords =
    taskwarrior
    pomodoro
    workflow
    reminder
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

