[metadata]
name = pomodoroTasks2
packages = pomodorotasks
version = 0.5
author = liloman
author_email = "trazo.en.verde@gmail.com"
url = "https://github.com/liloman"
description="Graphical trayicon to pomodoro with taskwarrior/timewarrior"
keywords =
    taskwarrior
    pomodoro
    workflow
    reminder
    time-tracking
    timewarrior
    habit-tracking
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

