[metadata]
name = pomodoroTasks2
packages = pomodorotasks2
version = 0.5
author = liloman
author_email = "trazo.en.verde@gmail.com"
url = "https://github.com/liloman"
description="Graphical trayicon to pomodoro with taskwarrior/timewarrior"
keywords =
    taskwarrior
    pomodoro
    workflow
    reminder
    time-tracking
    timewarrior
    habit-tracking
license = GPLv3
classifiers =
    Intended Audience :: End Users/Desktop
    Environment :: X11 Applications :: GTK
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Environment :: Console
    Topic :: Utilities

